# soccer-matches

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: fetcher.yml
data/RCJE2025/: matches.json
data/RCJI25/: matches.json
soccer_matches/: fetch.py
